# qc-sandbox

./: .gitignore  LICENSE  README.md  Testing.py  main.py  meals.db  package-lock.json  pyproject.toml  userDataDB.py  userinputDB.py  users.db
WebApp/: README.md  package-lock.json  package.json
WebApp/public/: index.html
WebApp/src/: App.tsx  index.tsx
WebApp/src/components/: FoodDiary.tsx  MainMenu.tsx  Onboarding.tsx  Recipes.tsx
WebApp/src/types/: index.ts
chroma_usda/: chroma.sqlite3
embedding_database/: embeddings.npy  faiss_index.faiss  food.db  ids.npy
src/: clip_embedding_tester.py  final_webApp.py  food_db_creation.py  image_caption.py  llm.py  openai_clip.py  torch_faiss_loader.py  vector_embedding_creation.py  webApp.py
src/streamlit_webApp/: webApp.py
