[project]
name = "qc-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "faiss-cpu>=1.11.0",
    "notebook>=7.4.4",
    "numpy>=2.3.1",
    "onnxruntime-qnn>=1.22.0",
    "openpyxl>=3.1.5",
    "streamlit>=1.46.1",
    "tokenizers>=0.21.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.2",
]
